src/test/ui/pattern/usefulness/match-range-fail-dominate.stderr
error: unreachable pattern
  --> $DIR/match-range-fail-dominate.rs:6:7
   |
LL |       5 ..= 6 => { }
   |       ^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/match-range-fail-dominate.rs:1:9
   |
LL | #![deny(unreachable_patterns, overlapping_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-range-fail-dominate.rs:13:7
   |
LL |       4 ..= 6 => { }
   |       ^^^^^^^

error: unreachable pattern
  --> $DIR/match-range-fail-dominate.rs:20:7
   |
LL |       4 ..= 6 => { }
   |       ^^^^^^^

error: unreachable pattern
  --> $DIR/match-range-fail-dominate.rs:27:7
   |
LL |       'a' ..= 'z' => {}
   |       ^^^^^^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:33:7
   |
LL |       0.01f64 ..= 6.5f64 => {}
   |       ^^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:33:19
   |
LL |       0.01f64 ..= 6.5f64 => {}
   |                   ^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:42:7
   |
LL |       0.02f64 => {}
   |       ^^^^^^^

error: unreachable pattern
  --> $DIR/match-range-fail-dominate.rs:42:7
   |
LL |       0.02f64 => {}
   |       ^^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:33:7
   |
LL |       0.01f64 ..= 6.5f64 => {}
   |       ^^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:33:19
   |
LL |       0.01f64 ..= 6.5f64 => {}
   |                   ^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:42:7
   |
LL |       0.02f64 => {}
   |       ^^^^^^^

error: aborting due to 11 previous errors

